# AtliQ-T-Shirts-LLM-powered-MySQL-Q-A-App

./: .env  README.md  db_creation_atliq_t_shirts.sql  langchain_helper.py  main.py  new_langchain_helper.py  project_demo.py  pyproject.toml
