[project]
name = "new_llm_project"
version = "0.1.0"
description = ""
authors = [
    {name = "Nevivaghani",email = "nevivaghani793@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-ai-generativelanguage (>=0.6.17,<0.7.0)",
    "langchain-google-genai (>=2.1.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
